<resources>
    <string name="app_name">Leto</string>
    <string name="join_game">Join Game</string>
    <string name="start_quiz">Start quiz</string>
    <string name="quiz_creator">By %s</string>
    <string name="quiz_question_count">%s questions</string>
    <string name="play">Play</string>
    <string name="public_quizzes">Public quizzes</string>
    <string name="code">Code</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome %s!</string>
    <string name="in_the_game">In the game!</string>
</resources>