<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mirostuyven.leto.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".home.HomeFragment">

        <TextView
            android:id="@+id/play_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/join_game_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_title">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/code_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/code">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/join_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/join_game"
                android:textAppearance="?attr/textAppearanceHeadline6" />
        </LinearLayout>

        <TextView
            android:id="@+id/quizzes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/public_quizzes"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/join_game_group" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/quizzes_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quizzes_title"
            app:quizListData="@{viewModel.quizzes}"
            tools:itemCount="2"
            tools:listitem="@layout/quiz_item" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/quizzes_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quizzes_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
